<resources>
    <string name="app_name">M3aak Driver</string>

    <string name="action_settings">Settings</string>
    <string name="servernotresponding">Server Not Responding</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="login_tapyourcard">Tap Your Card</string>
    <string name="login_userid">User Id</string>
    <string name="login_password">Password</string>
    <string name="login_driverlogin">Driver Login</string>
    <string name="title">M3aak School Bus Tracking</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="qr_empty">No result in qr</string>
    <string name="login_username">User Id</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection.</string>
    <string name="no_internet">Please Check Your Internet Connection !</string>
    <string name="error_connect">Failed to connect</string>

    <string name="no_nfc">No NFC found on this device.</string>
    <string name="not_empty">Field cannot be empty.</string>
    <string name="login">LOGIN</string>
    <string name="wait">Please Wait.......</string>
    <string name="nfc_disabled">nfc_disabled</string>
    <string name="NFC_RECORD">NFC RECORD</string>
    <string name="success">Success</string>
    <string name="thank_you">Thank you !</string>
    <string name="qr_login_txt">Student QR Check In/Out</string>
    <string name="set_notification">Set Notification</string>
    <string name="profile">Profile</string>
    <string name="chat_with_school_admin">Chat with School Admin</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading</string>
    <string name="message_sent">Message Sent!</string>
    <string name="set_message">Please set message and try again !</string>
    <string name="choose_message">Choose message to send</string>
    <string name="alert">Alert</string>
    <string name="enable_gps">Please enable GPS before use app.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="loading_map">Loading Map</string>
    <string name="speed_is">Speed is </string>
    <string name="wrong_route_noti">Wrong route notification sent !</string>
    <string name="over_speed_noti">Over speed notification sent !</string>
    <string name="add_message">Add message first.</string>
    <string name="confirm">Confirm</string>
    <string name="proceed_msg">Do you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="student_absent">Student is Absent.</string>
    <string name="absent">Absent</string>
    <string name="CheckOut">CheckOut</string>
    <string name="CheckIn">CheckIn</string>
    <string name="Updating">Updating</string>
    <string name="Profile">Profile</string>
    <string name="Chat">Chat</string>
    <string name="total_present">Total Present</string>
    <string name="total_waiting">Total Waiting</string>
    <string name="total_absent">Total Absent</string>
    <string name="total_student">Total Student</string>
    <string name="Attached_File">Attached File</string>
    <string name="download_done">Download complete.</string>
    <string name="write_msg">Please write message and try again !</string>
    <string name="student_CheckIn">Student is CheckedIn.</string>
    <string name="Send">Send</string>
    <string name="on_map">Students on Map</string>
    <string name="on_bus">Students on Bus</string>
    <string name="language_title">Select preferred language</string>.
    <string name="english">English</string>
    <string name="arabic">العربية</string>


    <string name="remember_me">Remember Me</string>
    <string name="tap_card">Tap Your Card</string>
    <string name="or">OR</string>
    <string name="login_qr">LOGIN WITH QR CODE</string>
    <string name="set_edit_noti">Set Or Edit Notification Here</string>
    <string name="msg1">Message1 here</string>
    <string name="msg2">Message2 here</string>
    <string name="msg3">Message3 here</string>
    <string name="msg4">Message4 here</string>
    <string name="msg5">Message5 here</string>
    <string name="save">Save</string>
    <string name="set_noti_title">Set Notification</string>
    <string name="title_parent_chooser">Select Parent to call</string>
    <string name="title_parent_chooser_multi">Select Parent to send notification</string>
    <string name="send">Send</string>
    <string name="change_language">Change Language</string>


    <string name="nationality">Nationality</string>
    <string name="blood_group">Blood Group</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="license_expiry_date">License Expiry Date</string>
    <string name="documnet_name">Document Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="remind_before_days">Remind before days</string>
    <string name="vehical_insurance_copy">Vechile insurance card copy</string>
    <string name="write_here">Write here</string>
    <string name="all_parent">All Parent</string>
    <string name="download">Download</string>
    <string name="download_start">Downloading start</string>
    <string name="unable_download">Unable to download file</string>
    <string name="absent_confirmation_msg">Do you want to mark student as absent?</string>
    <string name="check_in_confirmation_msg">Do you want to mark student as CheckedIn?</string>
    <string name="check_out_confirmation_msg">Do you want to mark student as CheckedOut?</string>

    <string name="want_logout">Do you want to logout ?</string>
    <string name="save_">SAVE</string>

    <string name="bus_arrive_str">Bus will arrive to your stop within</string>
    <string name="mins">mins.</string>

    <string name="type_msg">Please write message and try again !</string>
    <string name="student">Student</string>




    <string name="ble_not_supported">BLE is not supported.</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="about">About BTDemo</string>
    <string name="version">Version</string>
    <string name="unknown_version">Unknown version</string>

    <!-- Activity -->
    <string name="apdu_command">APDU command</string>
    <string name="atr">ATR</string>
    <string name="authenticate">Authenticate</string>
    <string name="authentication_key">Authentication Key</string>
    <string name="battery_service">Battery service</string>
    <string name="battery_level">Battery level: </string>
    <string name="battery_status">Battery status: </string>
    <string name="card_reader_not_ready">Card reader is not ready</string>
    <string name="card_status_2">Card status: </string>
    <string name="clear">Clear</string>
    <string name="connection_status">Connection status: </string>
    <string name="device_info">Device Info</string>
    <string name="escape_command">Escape command</string>
    <string name="fw_revision">FW revision: </string>
    <string name="hw_revision">HW revision: </string>
    <string name="get_battery_level">Get Battery Level</string>
    <string name="get_battery_status">Get Battery Status</string>
    <string name="get_device_info">Get Device Info</string>
    <string name="get_card_status">Get Card Status</string>
    <string name="set_tx_power">Set Tx Power</string>
    <string name="manufacturer">Manufacturer: </string>
    <string name="model_num">Model Num: </string>
    <string name="noData"></string>
    <string name="power_off_card">Power Off Card</string>
    <string name="power_on_card">Power On Card</string>
    <string name="serial_num">Serial Num: </string>
    <string name="card_status">Card Status</string>
    <string name="start_polling">Start Polling</string>
    <string name="status_change_notifications">Status change notifications</string>
    <string name="stop_polling">Stop Polling</string>
    <string name="system_id">System ID: </string>
    <string name="transmit_apdu">Transmit APDU</string>
    <string name="transmit_escape_command">Transmit Escape Command</string>

    <string-array name="tx_power_values">
        <item>-23 dBm</item>
        <item>-6 dBm</item>
        <item>0 dBm</item>
        <item>4 dBm</item>
    </string-array>

    <!-- Connection status -->
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="connect_fail">Fail to connect</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="disconnect_fail">Fail to disconnect</string>

    <!-- Menu items -->
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

</resources>
