<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#008A97"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dip">

                    <net.w2s.driverapp.MyWidgets.CircleImageView
                        android:id="@+id/user_pro_pic"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/profile_big"
                        circle:border_color="#000000"
                        circle:border_width="1dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="15dip">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="D Name"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/user_country"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="Riyadh, KSA"
                        android:textColor="#ffffff"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F5F5F5"
                android:orientation="vertical"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/nationality"
                    android:textColor="@color/green"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txtNationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="Mohammad Ahmad"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dip"
                    android:background="#c7c7c7" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/blood_group"
                    android:textColor="@color/green"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txtBloodGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="Mohammad Ahmad"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dip"
                    android:background="#c7c7c7" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/green"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txtDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="Mohammad Ahmad"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dip"
                    android:background="#c7c7c7" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/mobile_number"
                    android:textColor="@color/green"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txtContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="Mohammad Ahmad"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dip"
                    android:background="#c7c7c7" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/email"
                    android:textColor="@color/green"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="Mohammad Ahmad"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dip"
                    android:background="#c7c7c7" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/license_expiry_date"
                    android:textColor="@color/green"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/licency_expirey_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="Mohammad Ahmad"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dip"
                    android:background="#c7c7c7" />


                <ImageView
                    android:id="@+id/imgQrCode"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center|bottom"
                    android:layout_margin="10dip"
                    android:scaleType="centerInside"
                    android:src="@drawable/tap_card" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/document_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>