<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="4">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/txtViewHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:drawableLeft="@drawable/help_ic"
            android:drawablePadding="5dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="3"
        android:background="@drawable/background_loginmain"
        android:orientation="vertical"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@drawable/login_header1">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:src="@drawable/title_logo"
    android:layout_gravity="left|center_vertical"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/login_driverlogin"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/top_card_back"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:text="@string/login_tapyourcard"
                    android:textColor="#232323"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_height="match_parent" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/top_border_new"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                   android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/tap_card"
                    android:scaleType="centerInside"
                    android:layout_gravity="left|center_vertical"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.8">

            <EditText
                android:id="@+id/u_email"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/user_ic"
                android:textColor="#828282"
                android:hint="@string/login_userid"
                android:singleLine="true"
                android:inputType="text"
                android:text=""
                android:imeOptions="actionNext"
                android:drawablePadding="10dp"
                android:background="@drawable/edit_text_back"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.8">
            <EditText
                android:id="@+id/u_pass"
                android:layout_width="match_parent"
                android:hint="@string/login_password"
                android:textColor="#828282"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:text=""
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:drawableLeft="@drawable/pw_ic"
                android:background="@drawable/edit_text_back"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:weightSum="2">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent">


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/forgot_pass_txt"
                        android:layout_width="match_parent"
                        android:textColor="#018995"
                        android:text="Forgot Password ?"
                        android:gravity="right"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.8">
<TextView
    android:id="@+id/login_txt"
    android:layout_width="match_parent"
    android:shadowColor="#000000"
    android:text="LOGIN"
    android:textColor="#ffffff"
    android:gravity="center"
    android:background="@drawable/round_corner_login"
    android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/background_loginmain"
        android:layout_centerInParent="true"
        android:textColor="#232323"
        android:text="OR"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        >

            <LinearLayout
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                >
                <TextView
                    android:id="@+id/loginWithQrCode"
                    android:layout_width="match_parent"
                    android:shadowColor="#000000"
                    android:text="LOGIN WITH QR CODE"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:background="@drawable/round_corner_login"
                    android:layout_height="match_parent" />
            </LinearLayout>

    </LinearLayout>
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/background_loginmain"
        android:layout_centerInParent="true"
        android:textColor="#232323"
        android:text="OR"/>
</RelativeLayout>